<resources>
    <string name="app_name">Hello Mart Ug</string>
    <string name="facebook_app_id">519640568528271</string>
    <string name="fb_login_protocol_scheme">fb519640568528271</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop">Shop</string>
    <string name="categories">Shop by Categories</string>
    <string name="my_account">My Account</string>
    <string name="orders">Orders</string>
    <string name="search_items">Search items</string>
    <string name="search_hint">Search items…</string>
    <string name="cart">My Cart</string>
    <string name="title_activity_billing_details">Billing Details</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="about_dev">PlexoSys Consult Ltd is a top business technology solutions company in Uganda. We build apps, systems, and digital experiences to Help you Make More Money, Save Time and Simplify your business!</string>
    <string name="about_hellomart">HelloMart is a leading online supermarket in Uganda. Shop your weekly groceries and home supplies easily and conveniently at everyday low prices and have them delivered to your doorstep!</string>
    <string name="pesapal_description">Supports credit/debit card, MTN Mobile Money and Airtel Money Payment.</string>
    <string name="pesapal_payment">PesaPal Payment</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="my_orders">My Orders</string>
    <string name="help">Help Center</string>
    <string name="invite">Invite a Friend</string>
    <string name="home">Home</string>
    <string name="grocery_household_supplies"><![CDATA[Grocery & Household Supplies]]></string>
</resources>
