<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_action_shopping_basket"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_action_format_list_bulleted"
            android:title="@string/categories" />


        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_action_shopping_cart"
            android:title="Cart" />


        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_action_account_box"
            android:title="@string/my_account" />


        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_action_history"
            android:title="@string/orders" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
