<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.plexosysconsult.hellomartmobile.PaymentMethodsFragment">


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RadioButton
            android:id="@+id/rb_cod"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cash_on_delivery"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_pesapal"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pesapal_payment"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description_pesapal"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/pesapal_description"

            />


    </RadioGroup>

    <Button
        android:id="@+id/b_place_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="Place Order"
        android:textColor="#FFFFFF" />


</LinearLayout>
